deployment-manifests-examples/gateway-api-coaching/netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: jaz-eks-activity
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["/bin/bash"]
    args: ["-c", "while true; do ping localhost; sleep 60;done"]
