deployment-manifests-examples/gateway-api-coaching/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaz-echo-service
  namespace: jaz-eks-activity
spec:
  selector:
    app: echo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
